# rl

./: .gitignore  Cargo.toml  Justfile  PLAN.md  TODO.md  package-lock.json  package.json
.sqlx/: query-04b2ab82214676bdb6e5326bf5aada161a52b4eeb3e5e5556754118ab610c43b.json  query-0ceef8a1310c63df5b37912093e1d6b20644676a2625814756868639531550bf.json  query-0e8632b4916c70226fc4291cd676e494061cfc30a02c5f53809c54fc08ba84eb.json  query-18b845fa47b4334143521895c6a14aa89d49013750879320553ae7f189c80ed3.json  query-1ece7cd562bde9b1c1ad71c40f4d67e4f03df9b159d3596706c226e8de1603a0.json  query-260ccae0ae1c0f0b5e6a92bebf8a4caa9feed24ac75ef1ea7de3dee13df94583.json  query-2fe785b6157b50d5f89f6f49e92bbc88a0b45ac6a810e2301405523dfd5218a9.json  query-33ae84505de9492524ffc2bfddc68b66e9ad2e98d316cf649d7b424264ae45e1.json  query-36b3dcb486933673c101a1844d277f2849284d4e9f83bb19a22706f778f776e3.json  query-4085b306089ffa48ec2a6045341b19a76acb1681796f7474018ef5b6287328d2.json  query-40d1bd91c5e0cbe4750a93e4378bc21e7cee60dc6ba7482aa763d89e2472f731.json  query-42b02ab4fc004b767ecd2817a706074473e754822ca06328c07a75a3346444a5.json  query-4a50754455dbc854d6aadea9a1d49c6bd4a0f8ae8bd619d6231bb018ebcfb1b4.json  query-56428044f4951abbc38c1d385ff19cdabe42f32408412208a78a3b80678e1911.json  query-6a50798f3fa88b7587c01492db76c7ea646cb601352e7f8cf62005bdf9a7b2a3.json  query-72911c58f27a03b02f8ef7082f3b6e63a076c0e456c5296d1875953dcf997140.json  query-75aad59ea2f01513b23c551f5dfd0e8b5205fa800530147ac0078308a33154c7.json  query-8a252023923389de909f85db454c844030713e352ba8975b14f15763836c854b.json  query-935702a87a70428cc5c2d15f0c4a03c8c09ee0329ee7052b5176b63e43c686ca.json  query-93cb63fbaae97e4ca4d71dd9b6bcc7b5db00f46778a3319bc62fee47ed33c7b4.json  query-9554a11c8f2d3146a755a3024eb12c7fdf766d4e4260b3e6019879cf42b047c2.json  query-9b115e9b66b77bed06c82934fb8513b25d3e17ded8076b89a9490b6703cfd8bd.json  query-aa5e48f279d1b714086b21923ef63d5c063b5c9454f0444ce41b3cf4a3430e56.json  query-c403b26dff3145ca746913ca845b67d1a3d187b38b2b32edfbf670cc5b54db23.json  query-c44faf96b310e96b3a9418a12f202b487716c110228ad1440726df5436cf7b56.json  query-c82c4313093a7440bde0515c3208dfe9eebac6fb60594592aa310f161fae351d.json  query-cd5aeb1773b6a8a07004d318e4ff99f288756f35fe19271397cf23b9ef0b6bf3.json  query-cd8b08638d1ef630143a2814571b3cb0389033af789423bb6b48138f6a5d01b8.json  query-d1e896477728d47621ebc13c36027f880e949fadee840ebbdf0907ea35067c74.json  query-da45c46b54132302ea91b1445a60b0bdb66f54ab2cf0e3d957ee7b6dcab60f6d.json  query-e6287a0404f14d4ab8c2ce57d4fe63b9df4644f9b1c0310df52c10721d892e54.json  query-e63d19f155b7f72d8258e7ec5f00243451c39271c061fadb1215802d824d4c78.json  query-ebd1a34d30ada11b55377d838b7c5986ef77db796df0b3f7978a57bc6a2e11c9.json  query-f08517c9e06195a6266f6c7b3ab92e055aaa89227ca2be306150eb3920dc6dd7.json  query-f0dc5c9cd398ab8fc17af6d45e47e96919646cb2dd2fb6f5bf4e2146df629a2b.json  query-f106aa8bd8f2b55f6f586f839b68e4feb627791c5862931797df1b35e7712ae0.json
client/: package.json  vite.config.ts
cm-build/: build.js  package-lock.json  package.json
migrations/: 0001_init.sql  0002_embeddings.sql  0002_reading_content.sql  0003_last_read.sql  0005_resource_status.sql
server/: Cargo.toml
server/scripts/: pdf_extract.py
server/src/: db.rs  error.rs  main.rs  state.rs
server/src/api/: dto.rs  extract.rs  files.rs  mod.rs  notes.rs  resources.rs  search.rs  tags.rs  upload.rs
server/src/handlers/: mod.rs  resources.rs  search.rs  static_files.rs
server/src/indexing/: chunk.rs  embed.rs  meta.rs  mod.rs  note.rs  pdf.rs  pymupdf.rs  reader.rs  url.rs
server/src/models/: mod.rs  reading.rs  resource.rs  tag.rs
server/src/views/: mod.rs  notes.rs  resources.rs
server/tests/: ts_export.rs
(+130 files in other folders)
