[package]
name = "rl-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rl"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio-util = { version = "0.7", features = ["io"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Markdown
pulldown-cmark = "0.11"

# Config
dotenvy = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PDF extraction
pdf-extract = "0.7"

# MIME type guessing
mime_guess = "2"

# URL encoding for query strings
urlencoding = "2"

# HTTP client for URL fetching
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }

# HTML to text stripping
scraper = "0.19"

# TypeScript binding generation
ts-rs = { version = "9", features = ["chrono-impl"] }
